--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
+html{
+    min-height: 100%;
+}
+
+body{
+    font-family: Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    top: 0;
+}
+
+main{
+    padding-top: 40px;
+}
+
 .hide {
     display: none;
 }
@@ -8,4 +26,53 @@
 
 img{
     width: 200px;
+}
+
+body{
+    background-color: #172418;
+    color: white;
+}
+
+ul li {
+    list-style:  none;
+}
+
+body > header{
+    padding: 40px 20px;
+    vertical-align: middle;
+    background-color: black;
+}
+
+body > header div
+{
+    display: inline-block;
+    font-size: 1.75rem;
+    margin-right: 10px;
+}
+
+h1 {
+    display: inline;
+}
+
+@media (min-width: 850px){
+
+    header{
+        margin-bottom: 0;
+    }
+
+    body{
+        height: 100%;
+        background-color: rgb(49, 54, 49);
+    }
+    
+    main{
+        margin-top: 0;
+        padding-top: 40px;
+        padding-bottom: 100px;
+        background-color: #172418;
+        width: 60%;
+        margin-left: 20%;
+        min-height: 100%;
+    }
+    
 }
